# fastapi-translations-management

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-doc.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
fastapi_translation/: cli.py  git.py  models.py  paths.py  printer.py  translation.py
fastapi_translations/: cli.py  git.py  models.py  printer.py
tests/: models_test.py
